fix(mobile): formatting toolbar appears cut off (closes #7206)

--- a/apps/client/src/widgets/type_widgets/ckeditor/mobile_editor_toolbar.css
+++ b/apps/client/src/widgets/type_widgets/ckeditor/mobile_editor_toolbar.css
@@ -27,11 +27,11 @@
     display: flex;
     align-items: flex-end;
     user-select: none;
+    scrollbar-width: 0 !important;
 }
 
-.classic-toolbar-widget::-webkit-scrollbar {
+.classic-toolbar-widget::-webkit-scrollbar:horizontal {
     height: 0 !important;
-    width: 0 !important;
 }
 
 .classic-toolbar-widget.dropdown-active {
